<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="1dp">

    <LinearLayout
        android:id="@+id/layout_group"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="@dimen/overall_text_padding"
        android:layout_weight="0.30"
        android:orientation="vertical"
        android:background="@color/subheading_grey">

        <TextView
            android:id="@+id/pr_severity_group_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/group"
            android:textColor="@color/highlight_blue"
            android:textSize="@dimen/heading_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.70"
        android:orientation="vertical"
        android:background="@color/heading_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/overall_text_padding"
                android:layout_weight="0.19"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pr_severity_group_open"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/open"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/overall_text_padding"
                android:layout_weight="0.19"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pr_severity_group_verified"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/verified"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/overall_text_padding"
                android:layout_weight="0.19"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pr_severity_group_closed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/closed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/overall_text_padding"
                android:layout_weight="0.19"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pr_severity_group_total"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/overall_text_padding"
                android:layout_weight="0.26"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/pr_severity_group_last_7_days"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/last_7_days"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_small"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>