<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_npitracker_phase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingTop="@dimen/activity_vertical_margin"
       >

        <LinearLayout
            android:id="@+id/npiphase_l1"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/npiphase_t1"
                android:text="@string/npiview"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/npiphase_l1"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <TextView
                android:visibility="visible"
                android:gravity="center"
                android:id="@+id/username_display"
                android:text="(asprashanth)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/bt_npi_synch"
            android:background="@drawable/sync_selector"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:id="@+id/layout_lastsync_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            >
            <TextView
                android:id="@+id/t_lastsync"
                android:text="@string/lastsync"

                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="05dp"
                android:text=""
                android:id="@+id/t_lastsync_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_back_button"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bt_back"
                android:background="@drawable/back_selector"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
            android:gravity="center"
            android:text="@string/menu"
            android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/npimenu"

             />
        </LinearLayout>

        <TextView
            android:layout_toLeftOf="@+id/toggleButton"
            android:id="@+id/switch_text"
            android:text="All NPI"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:layout_alignBottom="@+id/npiphase_l1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <android.support.v7.widget.SwitchCompat

            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButton"

            android:scaleX="1.2"
            android:layout_marginBottom="5dp"
            android:scaleY="1.2"
            android:textSize="10sp"

            android:layout_alignParentEnd="true"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/rel_saveprofile"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:text="Save Profile"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_lastsync_display" />


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>