<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_release_list_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.juniper.npitracker.rlistatus.RLIViewActivity">

    <LinearLayout
        android:layout_below="@+id/activity_release_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorlightgray" />

    </LinearLayout>

    <!--<ListView-->
        <!--android:id="@+id/releaselist"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_below="@+id/activity_release_list">-->

    <!--</ListView>-->

    <com.diegocarloslima.fgelv.lib.FloatingGroupExpandableListView
        android:id="@+id/releaselist"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:groupIndicator="@null"
        android:layout_below="@+id/activity_release_list">
        android:background="@android:color/white"  >
    </com.diegocarloslima.fgelv.lib.FloatingGroupExpandableListView>


    <RelativeLayout
        android:id="@+id/activity_release_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/npiphase_l1"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/npiphase_t1"
                android:text="@string/releaselist"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/npiphase_l1"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">
            <TextView
                android:visibility="visible"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:id="@+id/username_display"
                android:text="(asprashanth)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_back_button"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bt_back"
                android:background="@drawable/back_selector"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:text="@string/menu"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/npimenu"

                />
        </LinearLayout>
       <!-- <ImageButton
            android:id="@+id/bt_back"
            android:background="@drawable/leftcolorarrow"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="03dp"
            android:layout_width="30dp"
            android:layout_height="25dp" />-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/layout_lastsync_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/t_lastsync"
                android:text="@string/lastsync"

                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="05dp"
                android:text=""
                android:id="@+id/t_lastsync_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView
            android:id="@+id/settings"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:background="@drawable/settings_selector"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />
        <!--<TextView
            android:gravity="center"
            android:text="@string/menu"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npimenu"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_alignBottom="@+id/npiphase_l1"
            android:layout_toEndOf="@+id/bt_npi_synch" />-->
    </RelativeLayout>

</RelativeLayout>
