<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juniper.npitracker.fragments.TestStatusFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/layout_fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="15dp"
            android:orientation="vertical"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/heading_bg" >

                    <TextView
                        android:id="@+id/npi_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="SUMMIT"
                        android:textColor="@color/black"
                        android:textSize="@dimen/npi_details_heading" />

            </LinearLayout>

            <!-- Test Progress Layout -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:orientation="horizontal"
                android:background="@color/white" >

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/overall_text_padding"
                    android:paddingBottom="@dimen/overall_text_padding"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/test_progress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/test_progress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/npi_details_subheading" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/overall_text_padding"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/test_progress_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="20"
                        android:textColor="@color/black"
                        android:textSize="@dimen/npi_details_subheading" />

                </LinearLayout>

            </LinearLayout>

            <!-- RSP Testcase Layout -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/overall_text_padding"
                android:background="@color/heading_bg" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:text="@string/rsp_testcase_method"
                    android:textColor="@color/black"
                    android:textSize="@dimen/npi_details_heading" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="15dp">

                <!-- Executed -->
                <LinearLayout
                    android:id="@+id/layout_executed"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white" >

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/overall_text_padding"
                        android:paddingBottom="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_execution"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:text="@string/execution"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_execution_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0%"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                </LinearLayout>
                <!-- Pass-rate -->
                <LinearLayout
                    android:id="@+id/layout_passrate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/layout_executed"
                    android:background="@color/white" >

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/overall_text_padding"
                        android:paddingBottom="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_pass_rate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:text="@string/pass_rate"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_pass_rate_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                </LinearLayout>
                <!-- Scripted -->
                <LinearLayout
                    android:id="@+id/layout_scripted"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/layout_passrate"
                    android:background="@color/white" >

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/overall_text_padding"
                        android:paddingBottom="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_scripted"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:text="@string/scripted"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/overall_text_padding"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/rsp_scripted_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="@dimen/npi_details_subheading" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_scrollable"
            android:layout_below="@id/layout_fixed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/layout_margin_top">

            <com.diegocarloslima.fgelv.lib.FloatingGroupExpandableListView
                android:id="@+id/expandableListView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:groupIndicator="@null"
                android:background="@android:color/white"  >
            </com.diegocarloslima.fgelv.lib.FloatingGroupExpandableListView>

        </LinearLayout>
    </RelativeLayout>

    <!--<Button-->
        <!--android:id="@+id/send_email"-->
        <!--android:background="@color/white"-->
        <!--android:text="@string/send_report"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end" />-->

</FrameLayout>
